force-app/main/default/objects/Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>What is the Contact&apos;s Email?</description>
    <inlineHelpText>What is the Contact&apos;s Email?</inlineHelpText>
    <label>Contact Email (DEPRECATED)</label>
    <type>Email</type>
</CustomField>