force-app/main/default/objects/Request__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Wat is the Contact&#39;s Phone?</description>
    <inlineHelpText>Wat is het telefoonnummer van het Contact?</inlineHelpText>
    <label>Contact Phone (DEPRECATED)</label>
    <type>Phone</type>
</CustomField>