force-app/main/default/objects/Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A place for an elaborate Description of the Request</description>
    <inlineHelpText>Omschrijf de Aanvraag</inlineHelpText>
    <label>Description (DEPRECATED)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>