force-app/main/default/objects/Request__c/fields/Name_Plate_Text__c.field-meta.xml
<CustomField>
    <fullName>Name_Plate_Text__c</fullName>
    <description>Field for KC users or tenants to enter the desired name for the name plate.</description>
    <inlineHelpText>Welke naam moet worden getoond op het naamplaatje?</inlineHelpText>
    <label>Name Plate Text</label>
    <length>64</length>
    <type>Text</type>
</CustomField>