force-app/main/default/objects/Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <description>The Request number that can be referenced in other processes</description>
    <displayFormat>AN-{00000}</displayFormat>
    <inlineHelpText>Wat is het Aanvraag Nummer?</inlineHelpText>
    <label>Request Number (DEPRECATED)</label>
    <type>AutoNumber</type>
</CustomField>