force-app/main/default/objects/Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The Subject of the Request</description>
    <inlineHelpText>Waar gaat de Aanvraag over?</inlineHelpText>
    <label>Subject (DEPRECATED)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>