force-app/main/default/objects/Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What is the Type of customer Request?</description>
    <inlineHelpText>Wat is het type Aanvraag?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Plate</fullName>
            </value>
            <value>
                <fullName>Landlord Statement</fullName>
                <isActive>false</isActive>
                <label>Landlord Statement</label>
            </value>
            <value>
                <fullName>Maintenance Inspection</fullName>
                <isActive>false</isActive>
                <label>Maintenance Inspection</label>
            </value>
            <value>
                <fullName>Payment Arrangement</fullName>
                <isActive>false</isActive>
                <label>Payment Arrangement</label>
            </value>
            <value>
                <fullName>Repair Request</fullName>
                <isActive>false</isActive>
                <label>Repair Request</label>
            </value>
            <value>
                <fullName>Self-Installed Facility</fullName>
                <isActive>false</isActive>
                <label>Self-Installed Facility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>